--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.2.0",
+    "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
     "leo-profanity": "^1.6.0",
     "lorem-ipsum": "^2.0.8",
+    "normalizr": "^3.6.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.5",
     "react-redux": "^8.0.2",
