--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
