--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5001",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@rollbar/react": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,30 +14,38 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
-    "leo-profanity": "^1.6.0",
+    "leo-profanity": "^1.7.0",
     "lorem-ipsum": "^2.0.8",
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^9.1.2",
+    "rollbar": "^2.26.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "^8.23.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-functional": "^4.2.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "node-sass": "^7.0.3",
+    "prettier": "2.8.7",
+    "sass-loader": "^13.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
