--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && npm ci",
+    "postinstall": "npm ci --prefix frontend",
     "build": "npm run build --prefix frontend",
     "start": "start-server -s ./frontend/build"
   },
