--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "rollbar": "^2.26.1",
+    "sass": "^1.62.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4",
